[package]
name = "netpulsar"
version = "0.3.0"
description = "Cross-platform network information tool"
authors = ["shellrow <shellrow@foctal.com>"]
edition = "2021"
repository = "https://github.com/shellrow/netpulsar"
homepage = "https://github.com/shellrow/netpulsar"
documentation = "https://github.com/shellrow/netpulsar"
keywords = ["network"]
categories = ["network-programming"]
license = "MIT"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "netpulsar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9", features = [ "tray-icon", "image-png" ] }
tauri-plugin-opener = "2.5"
tauri-plugin-autostart = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["time", "chrono"] }
libc = "0.2"
mac-addr = { version = "0.3.0" }
netdev = { version = "0.39", features = ["serde"] }
netroute = { version = "0.3", features = ["serde"] }
netsock = { version = "0.5", features = ["serde"] }
futures = {version = "0.3", features = ["executor", "thread-pool"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots", "http2", "system-proxy" ] }
hostname = { version = "0.4" }
os_info = { version = "3.12" }
ndb-oui = { version = "0.4", features = ["bundled"] }
ndb-tcp-service = { version = "0.3", features = ["bundled"] }
ndb-udp-service = { version = "0.3", features = ["bundled"] }
humansize = "2.1"
url = "2.5"
data-encoding = "2.9"
home = { version = "0.5" }
nex-packet = "0.24"
socket2 = { version = "0.5", features = ["all"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.7"
rustls-pki-types = "1.8"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
hickory-resolver = { version = "0.25" }
quinn = "0.11"
bytes = "1"
uuid = "1.18"
rand = "0.8"
#h3 = "0.0.8"
#h3-quinn = "0.0.10"
#http = "1.3"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.8"
netlink-packet-route = "0.25"
netlink-sys = "0.8"
rtnetlink = "0.18"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_Ndis",
    "Wdk_System_SystemServices",
    "Win32_System_Threading"
]
